--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,5 +34,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest tox tox-gh-actions
         pip install -r requirements.txt
+    - name: Install tox
+      run: pip install tox
+
     - name: Test with tox
       run: tox
