--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
         pip install flake8 pytest tox tox-gh-actions
         pip install -r requirements.txt
     - name: Install tox
-      run: pip install tox
+      run: pip install upgrade tox
 
     - name: Test with tox
       run: tox
