--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,6 +34,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest tox tox-gh-actions
         pip install -r requirements.txt
+    - name: Clean up .tox directory
+      run: rm -rf .tox
+
     - name: Install tox
       run: pip install --upgrade tox
 
