--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,11 +34,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest tox tox-gh-actions
         pip install -r requirements.txt
-    - name: Clean up .tox directory
-      run: rm -rf .tox
-
-    - name: Install tox
+    - name: upgrade tox
       run: pip install --upgrade tox
-
     - name: Test with tox
       run: tox
