--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest tox tox-gh-actions
-        pip install -r requirements.txt
+        pip install -r requirements_dev.txt
     - name: upgrade tox
       run: pip install --upgrade tox
     - name: Test with tox
