--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,6 @@ commands =
     # type linting
     mypy src/
     # pytest unit
-    pytest -v tests/unit
-    # pytest integration
-    pytest -v tests/integration
+    pytest -v tests/unit --maxfail=1 --disable-warnings --capture=no
+    # pytest integration 
+    pytest -v tests/integration --maxfail=1 --disable-warnings --capture=no
